checkpatch-results/home/fedora/lkml-analysis/lkml/0/0000122880.8e73d15569f5a0577a8fa73f87817b476f68864f
WARNING:TYPO_SPELLING: 'dependancy' may be misspelled - perhaps 'dependency'?
#16: 
Subject: Re: remove incorrect dependancy on CONFIG_APM
                              ^^^^^^^^^^

Some words may have been misspelled.  Consider reviewing them.

WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#34: 
 >  > arch/i386/kernel/apm.c:2304: error: 'pm_active' undeclared (first use in this function)

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000122880.commit.8e73d15569f5a0577a8fa73f87817b476f68864f total: 0 errors, 2 warnings, 0 checks, 26 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000122880.commit.8e73d15569f5a0577a8fa73f87817b476f68864f has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
